# NovaLIS

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FINAL CANONICAL TRUTH-NovaLIS.txt  LICENSE  NOVA_AGENT_IDENTITY_v3.0.md  NOVA_DEEP_MEMORY_SAVED_UNLOCK_REQUIRED_v1.0.md  QUICKSTART.md  README.md  REPO_MAP.md  SECURITY.md  START_HERE.md  TODO.md  USE_CASES.md  agent_execution_memory.py  agent_fallback_strategies.py  agent_orchestrator.py  agent_parameter_templates.py  agent_state_store.py  agent_thinking_loop.py  agent_tool_chaining.py  agent_tool_executor.py  agent_tool_registry_bootstrap.py  branches_safe_to_delete.txt  check_quarantine.ps1  complete_deployment_documentation.md  comprehensive_test_suite.py  conftest.py  governor_mediation.py  pyproject.toml  pytest-fast.ini  start_nova.bat  start_nova.sh  stop_nova.bat  stop_nova.sh
.agent_context/: brain_loop.md  current_priority.md  environments.md  governance.md
4-15-26 NEW ROADMAP/: BackLog.md  CHANGELOG.md  CURRENT_PRIORITY_OVERRIDE_2026-04-27.md  DEEP_CODE_AUDIT.md  HANDOFF_2026-04-26_CAP64_SIGNOFF_READY.md  HANDOFF_2026-04-26_TRUST_RECEIPT_RECOVERY.md  HANDOFF_2026-04-27_EMAIL_PAUSED_CONVERSATION_NEXT.md  HANDOFF_2026-04-27_REQUEST_UNDERSTANDING_LIVE_VERIFICATION.md  MasterRoadMap.md  NOVA_CONSOLIDATED_ROADMAP_2026-04-28.md  Now.md  SOFT_ROADMAP_GUIDE_2026-04-28.md
Documentation-Architecture-Docs/: # 🎨 Nova Frontend Dashboard — Tech.txt  # 🔄 Nova System Flow.txt  # 🗺️ Nova AI — Development Roadmap.txt  # 🧠 Nova Backend — Technical Overv.txt
Nova-Frontend-Dashboard/: dashboard-chat-news.js  dashboard-config.js  dashboard-control-center.js  dashboard-surfaces.css  dashboard-workspace.js  dashboard.js  index.html  landing.html  manifest.json  orb.js  style.phase1.css
NovaLIS-Governance/: ARCHITECT_CONTRACT.md  ENVIRONMENT_LOCK.md.txt  PHASE_1_LOCK.md  PHASE_2_LOCK.md  PHASE_3_LOCK.md  PRE_COMMIT_CHECKLIST.md  Phase-2-TODO-marker-file.txt  README.md  README.md.txt  README_GOVERNANCE.md  REPO_ANNOTATION_MAP.md  RUNTIME_TRUTH.md  SENIOR_REVIEW_DO_NOTS.md  STATUS.md  VISION_DIFF.md.txt
VERIFICATION/: PHASE_3.5_VERIFICATION_CHECKLIST.md  RESTORE_AND_ROLLBACK_TEST.md  SPOUSE_TEST_NOTES.md
_MOCs/: AUTHORITY_TIERS.md  BY_PHASE.md  BY_TOPIC.md  BY_TYPE.md  CODE_BY_LAYER.md  CODE_IMPORTS.md  CODE_MODULES.md  HOME.md  RECENT.md  REPO_BY_FOLDER.md  TEST_MAP.md  USER_PATHS.md
automations/: README.md
docs/: AI_TOOLING_BOUNDARIES.md  ARCHITECTURE.md  AUDIT_ACTION_PLAN_2026-04-28.md  CONSTITUTION.md.txt  CONTRIBUTING.md  COPILOT_DOC_SCOPE.md  DIRECT_ACTION_MODEL_SPEC.md.txt  Engineering Session Status.md  FULL_DOCUMENTATION_MAP.md  INDEX.md  INTRODUCTION.md  Master Capability Matrix.md  NOVA_CAPABILITY_MASTER.md  NOVA_OFFICIAL_ARCHITECTURE_MAP.md  NOVA_PHASE4_MASTER_STATUS.md  NOVA_PHASE4_PHASE7_CODE_COMPARISON.md  NOVA_TRUTH_v3.0_CANONICAL.md  PHASE_2_1_AUTHORITY_ENFORCEMENT.md  PHASE_3.5_FROZEN_STATUS.md  PHASE_3_5_SCOPE.md  (+12 more)
(+1987 files in other folders)
